--- a/.github/workflows/gui.yml
+++ b/.github/workflows/gui.yml
@@ -7,10 +7,8 @@ jobs:
   gui-test:
     runs-on: self-hosted
     env:
-      ACTIONS_RUNNER_DISABLE_PROCESS_CLEANUP: true 
+      ACTIONS_RUNNER_DISABLE_PROCESS_CLEANUP: true
 
     steps:
       - name: Open Notepad
-        shell: cmd
-        run: |
-          start "" "C:\Windows\System32\notepad.exe"
+        run: powershell Start-Process "notepad.exe"
